Add brand updation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -261,7 +261,7 @@ en:
   landing:
     about: "Smile welcome to Sujok Global, an innovative platform for teaching, Learning & Healing."
     welcome: Welcome to Sujok Global Classroom.
-    video: Watch our tutorial on using Sujok Global Classroom
+    video: Morning Calm (Smile Meditation)
     upgrade: Show me how to upgrade to 2.0!
     version: We've released a new version of Sujok Global Classroom, but your database isn't compatible.
   language_default: Default (browser language)
